--- a/html/dmt_attr_manage.html
+++ b/html/dmt_attr_manage.html
@@ -29,6 +29,7 @@
 					<option value="<?cs var:config.sum_report_max ?>">取上报最大值</option>
 					<option value="<?cs var:config.ex_report ?>">异常量</option>
 					<option value="<?cs var:config.str_report_d ?>">字符串型</option>
+					<option value="<?cs var:config.str_report_d_ip ?>">字符串型-IP省级</option>
 				</select>
 				<font class="note-text" id='dam_attr_type_note_txt' style='display:block'>
 					<label style="float:right;width:300px;">对一分钟内的上报进行累加统计</label>
