--- a/html/dmt_user.html
+++ b/html/dmt_user.html
@@ -64,6 +64,7 @@
 							<th width="70" orderField="last_login_time" class="asc">最后登陆时间</th>
 							<?cs /if ?>
 							<th width="70">最后登陆IP</th>
+							<th width="70">IP归属地</th>
 							<th width="100">电子邮箱</th>
 							<th width="80">备注</th>
 							<th width="20">详情</th>
@@ -123,6 +124,7 @@ function dulSetUserList()
 		uhtml += "<td>" + ulist[i].user_name + "</td>";
 		uhtml += "<td>" + ulist[i].last_login_time + "</td>";
 		uhtml += "<td>" + ulist[i].last_login_address + "</td>";
+		uhtml += "<td>" + ulist[i].last_login_address_region + "</td>";
 		uhtml += "<td>" + ulist[i].email + "</td>";
 		uhtml += "<td>" + ulist[i].remark + "</td>";
 
