--- a/html/dwz_foot.html
+++ b/html/dwz_foot.html
@@ -1,6 +1,7 @@
 <div id="footer"> 
-	Copyright &copy; 2019-2020 字符云监控. &nbsp;
-	<a style='text-decoration:underline;' href='http://www.miitbeian.gov.cn/' target='_blank'>粤ICP备19024085号-1.</a>&nbsp;
+	Copyright &copy; 2019-2020 字符云监控. &nbsp; 演示版域名
+	<a style='text-decoration:underline;' href='http://open.xrkmonitor.com' target='_blank'>open.xrkmonitor.com.</a>&nbsp;
+	<a style='text-decoration:underline;' href='http://beian.miit.gov.cn' target='_blank'>粤ICP备19024085号-1.</a>&nbsp;
 	<a style='text-decoration:underline;' href='#' onclick='djShowConnectInfo();'>联系我们</a>
 </div>
 
