--- a/language/javascript/dmt_test_report.html
+++ b/language/javascript/dmt_test_report.html
@@ -7,24 +7,30 @@
 		<meta http-equiv="content-Type" content="text/html; charset=utf-8" />
 	</head>
 
-<script src="/xrkmonitor/js/dmt_xrkmonitor.js"></script>
+测试 xrkmonitor 字符云监控系统，javascript 监控上报 api
+
+<script src="/monitor/js/dmt_xrkmonitor.js"></script>
 <script type="text/javascript">
-xrk.init_report('/cgi-bin/mt_slog_reportinfo', 179);
-xrk.report_attr_add(369, 1230);
-xrk.report_attr_add(369, 230);
-xrk.report_attr_add(370, 30);
-xrk.report_attr_add(370, 630);
-xrk.report_strattr_add(363, "rock", 1235);
-xrk.report_strattr_add(363, "rock", 2);
-xrk.report_strattr_add(367, "rock2", 332);
-xrk.report_strattr_add(367, "rock3", 3324);
-xrk.report_strattr_set(363, "setrock", 202);
-xrk.report_strattr_set(367, "setrock", 305);
-xrk.report_strattr_set(366, "ssssssssssssssrock22", 20);
-xrk.report_strattr_set(366, "setrock中国", 305);
-xrk.report_strattr_set(366, "setrock22", 305);
-xrk.report_strattr_set(366, "中国--%s rock", 305);
-xrk.report_strattr_set(363, "set-=rock22", 305);
+
+// 调试时可以打开，正式部署请关闭debug
+xrk.set_debug();
+
+xrk.init_report('http://192.168.128.110/cgi-bin/mt_slog_reportinfo', 171, 23, '8DMkJ2r2MQ');
+xrk.report_attr_add(210, 1230);
+xrk.report_attr_add(211, 230);
+xrk.report_attr_add(212, 30);
+xrk.report_attr_add(213, 630);
+xrk.report_strattr_add(300, "rock", 1235);
+xrk.report_strattr_add(300, "rock", 2);
+xrk.report_strattr_add(300, "rock2", 332);
+xrk.report_strattr_add(300, "rock3", 3324);
+xrk.report_strattr_set(301, "setrock", 202);
+xrk.report_strattr_set(301, "setrock", 305);
+xrk.report_strattr_set(301, "ssssssssssssssrock22", 20);
+xrk.report_strattr_set(329, "setrock中国", 305);
+xrk.report_strattr_set(329, "setrock22", 305);
+xrk.report_strattr_set(329, "中国--%s rock", 305);
+xrk.report_strattr_set(329, "set-=rock22", 305);
 xrk.report_log('error', 'test report log - id :222');
 xrk.report_log('warn', 'test report warn log - id :222');
 xrk.report_log('info', 'test report info log - id :222');
@@ -33,8 +39,6 @@ xrk.report_log('error', 'test report error2 log - id :222');
 xrk.report_to_server();
 
 </script>
-
-测试 xrkmonitor 字符云监控系统，javascript 监控上报 api
 
 </html>
 
