--- a/html/index.html
+++ b/html/index.html
@@ -52,8 +52,8 @@
 			}
         </script>
 	</head>
-	<body onload='iframeCheckIe();' style='overflow:hidden'> 
-		<iframe id="iframeId" name='main_iframe' frameborder="0" scrolling="auto" src="#" />
+	<body style='overflow:hidden'> 
+		<iframe id="iframeId" name='main_iframe' frameborder="0" scrolling="auto" src="/cgi-bin/slog_flogin?action=show_main" />
 	</body>
 </html>
 
