--- a/html/dwz_foot.html
+++ b/html/dwz_foot.html
@@ -3,6 +3,7 @@
 	<a style='text-decoration:underline;' href='http://open.xrkmonitor.com' target='_blank'>open.xrkmonitor.com.</a>&nbsp;
 	<a style='text-decoration:underline;' href='http://beian.miit.gov.cn' target='_blank'>粤ICP备19024085号-1.</a>&nbsp;
 	<a style='text-decoration:underline;' href='#' onclick='djShowConnectInfo();'>联系我们</a>
+	. (建议使用 Chrome 或者 Firefox 浏览器)
 </div>
 
 
