add js monitor def

--- a/html/index.html
+++ b/html/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="zh-CN">
 	<head>
+		<script src="/xrkmonitor/js/dmt_xrkmonitor.js" type="text/javascript"></script>
 		<meta http-equiv="Cache-Control" content="no-store, must-revalidate">
 		<meta http-equiv="expires" content="0">
 		<meta http-equiv="pragma" content="no-cache">
