--- a/html/dwz_js.html
+++ b/html/dwz_js.html
@@ -2,6 +2,7 @@
 <script src="<?cs var:config.docpath?>js/speedup.js" type="text/javascript"></script>
 <![endif]-->
 
+<script src="<?cs var:config.docpath?>js/dmt_xrkmonitor.js" type="text/javascript"></script>
 <script src="<?cs var:config.docpath?>js/jquery-1.7.2.min.js" type="text/javascript"></script>
 <script src="<?cs var:config.docpath?>js/jquery.cookie.js" type="text/javascript"></script>
 <script src="<?cs var:config.docpath?>js/jquery.validate.js" type="text/javascript"></script>
