add fastcgi module

--- a/language/javascript/dmt_test_report.html
+++ b/language/javascript/dmt_test_report.html
@@ -9,10 +9,11 @@
 
 测试 xrkmonitor 字符云监控系统，javascript 监控上报 api
 
-<script src="/monitor/js/dmt_xrkmonitor.js"></script>
+<script src="/js/dmt_xrkmonitor.js"></script>
 <script type="text/javascript">
 
 var xrk = window.self_xrk; 
+
 // 调试时可以打开，正式部署请关闭debug, 云版本
 xrk.set_debug();
 
