--- a/html/dmt_module.html
+++ b/html/dmt_module.html
@@ -93,7 +93,7 @@ function dmSetModulelist()
 	var uhtml = "";
 	for(var i=0, j=1; i < ulist.length; i++)
 	{
-		if(app_id != ulist[i].app_id || ulist[i].module_count <= 0)
+		if(app_id != 0 && app_id != ulist[i].app_id || ulist[i].module_count <= 0)
 			continue;
 
 		var mlist = ulist[i].modulelist;
