--- a/html/dwz_index.html
+++ b/html/dwz_index.html
@@ -40,7 +40,11 @@
 var g_di_cspath = '<?cs var:config.cspath ?>';
 var g_di_docpath = '<?cs var:config.docpath ?>';
 var g_di_cgipath = '<?cs var:config.cgipath?>';
+skdfsdkf;
 </script>
+
+<img src='skdfs' id='skdfskdsss'>
+
 
 </html>
 
