--- a/html/dwz_js.html
+++ b/html/dwz_js.html
@@ -2,7 +2,7 @@
 <script src="<?cs var:config.docpath?>js/speedup.js" type="text/javascript"></script>
 <![endif]-->
 
-<?cs if:config.daemon ?>
+<?cs if:config.notify_daemon ?>
 <script language="javascript" src="<?cs var:config.docpath?>js/dmt_xrkmonitor.js"></script>
 <?cs /if ?>
 
