--- a/html/main_meta.html
+++ b/html/main_meta.html
@@ -4,8 +4,8 @@
 <meta http-equiv="content-Type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="字符云监控系统,云监控系统,监控提醒,日志系统,云日志系统,日志汇聚,多云部署">
 <meta name="description" content="字符云监控系统-多云部署一站监控,一切尽在掌握!">
-<meta name="author" content="深圳市字符科技有限责任公司,xrkmonitor@163.com,qq:1820140912">
-<meta name="copyright" content="深圳市字符科技有限责任公司">
+<meta name="author" content="rockdeng,xrkmonitor@163.com,qq:1820140912">
+<meta name="copyright" content="rockdeng">
 <meta name="renderer" content="webkit">
 <title>字符云监控系统</title>
 
