--- a/html/index.html
+++ b/html/index.html
@@ -10,7 +10,7 @@
 		<meta name="author" content="rockdeng,1820140912@qq.com,qq:1820140912">
 		<meta name="renderer" content="webkit">
 		<link rel="icon" href="/xrkmonitor/themes/default/images/zifu_48.ico">
-		<title>字符云监控系统</title>
+		<title>字符云监控系统(xrkmonitor)</title>
         <style type="text/css">
             html, body
             {
