--- a/html/login_tween/dmt_login.html
+++ b/html/login_tween/dmt_login.html
@@ -60,7 +60,7 @@
 
 					<footer>
 						<a target='_blank' href='https://gitee.com/xrkmonitorcom/open/stargazers'><img src='https://gitee.com/xrkmonitorcom/open/badge/star.svg?theme=dark' alt='star'></img></a>
-						<button style='float:right' type="button" class="layui-btn layui-btn-radius layui-btn-primary layui-btn-xs"><i class="layui-icon layui-icon-home "></i>在线云版本</button>
+						<button style='float:right' onClick='goto_online();' type="button" class="layui-btn layui-btn-radius layui-btn-primary layui-btn-xs"><i class="layui-icon layui-icon-home "></i>在线云版本</button>
 					</footer>
                 </div>
             </div>
@@ -82,6 +82,11 @@
 <script language="javascript" type="text/javascript">
 	var g_req_timestamp = 0;
 	var g_login_in_cust_server = 0;
+
+	function goto_online()
+	{
+		window.location = 'http://xrkmonitor.com';
+	}
 
 	function login_submit()
 	{
