--- a/html/dwz_js.html
+++ b/html/dwz_js.html
@@ -10,9 +10,6 @@
 <script src="<?cs var:config.docpath?>js/jquery.cookie.js" type="text/javascript"></script>
 <script src="<?cs var:config.docpath?>js/jquery.validate.js" type="text/javascript"></script>
 <script src="<?cs var:config.docpath?>js/jquery.bgiframe.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>xheditor/xheditor-1.1.14-zh-cn.min.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>uploadify/scripts/jquery.uploadify.js" type="text/javascript"></script>
-
 <script src="<?cs var:config.docpath?>js/dwz.core.js" type="text/javascript"></script>
 <script src="<?cs var:config.docpath?>js/dwz.util.date.js" type="text/javascript"></script>
 <script src="<?cs var:config.docpath?>js/dwz.validate.method.js" type="text/javascript"></script>
@@ -50,7 +47,7 @@
 <!-- rock add -->
 <script src="<?cs var:config.docpath?>js/dmt.comm.20200502.js" type="text/javascript"></script>
 <script src="<?cs var:config.docpath?>js/echarts.min.js"></script>
-<script src="<?cs var:config.docpath?>js/echart_src/map/js/china.js"></script>
+<script src="<?cs var:config.docpath?>js/china.js"></script>
 <script src="<?cs var:config.docpath?>js/jquery.md5.js" type="text/javascript"></script>
 <script src="<?cs var:config.docpath?>js/jquery.highlight-3.js?v=0.3.5"></script>
 <script src="<?cs var:config.docpath?>js/frank_calendar.js?v=0.3.5"></script>
