--- a/html/index.html
+++ b/html/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang="zh-CN">
 	<head>
+		<title>字符云监控系统(xrkmonitor)</title>
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta http-equiv="Cache-Control" content="no-store, must-revalidate">
 		<meta http-equiv="expires" content="0">
 		<meta http-equiv="pragma" content="no-cache">
@@ -10,7 +12,6 @@
 		<meta name="author" content="rockdeng,1820140912@qq.com,qq:1820140912">
 		<meta name="renderer" content="webkit">
 		<link rel="icon" href="/xrkmonitor/themes/default/images/zifu_48.ico">
-		<title>字符云监控系统(xrkmonitor)</title>
         <style type="text/css">
             html, body
             {
@@ -25,32 +26,6 @@
                 height: 100%;
             }
         </style>
-        <script type="text/javascript">
-            function iframeResize() {
-                document.getElementById('iframeId').height="100%";
-                document.getElementById('iframeId').width="100%";
-            }
-			window.onresize = iframeResize;
-
-			// 明确暂不支持的浏览器返回 true
-			function IsOtherUA(ua) {
-				if(ua.indexOf("theworld") != -1)
-					return true;
-				return false;
-			}
-
-			function iframeCheckIe() {
-					var ua = navigator.userAgent.toLowerCase();
-					if(IsOtherUA(ua) 
-						|| (ua.indexOf("firefox") == -1 && ua.indexOf("chrome") == -1)) 
-					{
-						document.getElementById('iframeId').src = '/xrkmonitor/dmt_ie_tip.html';
-					}
-					else {
-						document.getElementById('iframeId').src = '/cgi-bin/slog_flogin?action=show_main';
-					}
-			}
-        </script>
 	</head>
 	<body style='overflow:hidden'> 
 		<iframe id="iframeId" name='main_iframe' frameborder="0" scrolling="auto" src="/cgi-bin/slog_flogin?action=show_main" />
