--- a/html/dmt_login_tween.html
+++ b/html/dmt_login_tween.html
@@ -16,9 +16,9 @@
     <link href="<?cs var:config.docpath?>/themes/sideshow/css/demo.css" rel="stylesheet" />
     <link href="<?cs var:config.docpath?>/themes/sideshow/css/component.css" rel="stylesheet" />
 	<?cs else ?>
-	<link href="<?cs var:config.docpath?>/themes/css/login.min.css" rel="stylesheet" />
-	<link href="<?cs var:config.docpath?>/themes/layui/css/layui.min.css" rel="stylesheet" />
-    <link href="<?cs var:config.docpath?>/themes/sideshow/css/sideshow.min.css" rel="stylesheet" />
+	<link href="<?cs var:config.docpath?>/themes/css/login.min.css?v=20200506" rel="stylesheet" />
+	<link href="<?cs var:config.docpath?>/themes/layui/css/layui.min.css?v=20200506" rel="stylesheet" />
+    <link href="<?cs var:config.docpath?>/themes/sideshow/css/sideshow.min.css?v=20200506" rel="stylesheet" />
 	<?cs /if ?>
 </head>
 
@@ -75,15 +75,23 @@
 </div>
 
 <?cs if:config.isdaemon == 1 ?>
-<script src="<?cs var:config.docpath?>js/dmt_xrkmonitor.js"></script>
+<script src="<?cs var:config.docpath?>js/dmt_xrkmonitor.js?v=20200506"></script>
 <?cs /if ?>
+
+<?cs if:config.xrkmonitor_debug==1 ?>
 <script src="<?cs var:config.docpath?>js/jquery-1.7.2.js"></script>
 <script src="<?cs var:config.docpath?>js/jquery.md5.js"></script>
 <script src="<?cs var:config.docpath?>js/jquery.cookie.js"></script>
-<script src="<?cs var:config.docpath?>js/dmt.comm.20200502.js" type="text/javascript"></script>
 <script src="<?cs var:config.docpath?>js/sideshow/TweenMax.js"></script>
 <script src="<?cs var:config.docpath?>js/sideshow/rAF.js"></script>
 <script src="<?cs var:config.docpath?>js/sideshow/demo-2.js"></script>
+<script src="<?cs var:config.docpath?>js/dmt.comm.js" type="text/javascript"></script>
+<?cs else ?>
+<script src="<?cs var:config.docpath?>js/jquery.min.js?v=2020506"></script>
+<script src="<?cs var:config.docpath?>js/jquery.other.min.js?v=2020506"></script>
+<script src="<?cs var:config.docpath?>js/dmt.comm.min.js?v=20200506" type="text/javascript"></script>
+<script src="<?cs var:config.docpath?>js/sideshow/sideshow.min.js?v=20200506"></script>
+<?cs /if ?>
 
 <script language="javascript" type="text/javascript">
 	var g_req_timestamp = 0;
