--- a/html/dwz_js.html
+++ b/html/dwz_js.html
@@ -47,49 +47,16 @@
 <script src="<?cs var:config.docpath?>js/dwz.combox.js" type="text/javascript"></script>
 <script src="<?cs var:config.docpath?>js/dwz.print.js" type="text/javascript"></script>
 <script src="<?cs var:config.docpath?>js/dwz.regional.zh.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/frank_calendar.js?v=0.3.5"></script>
+<script src="<?cs var:config.docpath?>js/frank_calendar.js"></script>
 <script src="<?cs var:config.docpath?>js/echarts.min.js"></script>
 <script src="<?cs var:config.docpath?>js/china.js"></script>
 <?cs else ?>
 <script src="<?cs var:config.docpath?>js/dmt.comm.min.js?v=20200506" type="text/javascript"></script>
 <script src="<?cs var:config.docpath?>js/jquery.min.js?v=2020506"></script>
 <script src="<?cs var:config.docpath?>js/jquery.other.min.js?v=2020506"></script>
-<script src="<?cs var:config.docpath?>js/dwz.core.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/dwz.util.date.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/dwz.validate.method.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/dwz.regional.zh.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/dwz.barDrag.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/dwz.drag.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/dwz.tree.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/dwz.accordion.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/dwz.ui.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/dwz.theme.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/dwz.switchEnv.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/dwz.alertMsg.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/dwz.contextmenu.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/dwz.navTab.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/dwz.tab.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/dwz.resize.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/dwz.dialog.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/dwz.dialogDrag.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/dwz.sortDrag.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/dwz.cssTable.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/dwz.stable.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/dwz.taskBar.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/dwz.ajax.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/dwz.pagination.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/dwz.database.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/dwz.datepicker.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/dwz.effects.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/dwz.panel.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/dwz.checkbox.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/dwz.history.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/dwz.combox.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/dwz.print.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/dwz.regional.zh.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/frank_calendar.js?v=0.3.5"></script>
-<script src="<?cs var:config.docpath?>js/echarts.min.js"></script>
-<script src="<?cs var:config.docpath?>js/china.js"></script>
+<script src="<?cs var:config.docpath?>js/dwz.all.min.js?v=2020506"></script>
+<script src="<?cs var:config.docpath?>js/echarts.min.js?v=2020506"></script>
+<script src="<?cs var:config.docpath?>js/china.min.js?v=2020506"></script>
 <?cs /if ?>
 
 <script type="text/javascript">
