--- a/html/dmt_plugin.html
+++ b/html/dmt_plugin.html
@@ -1,4 +1,9 @@
+<?cs if:config.xrkmonitor_debug==1 ?>
 <script src="<?cs var:config.docpath?>js/FileSaver.js" type="text/javascript"></script>
+<?cs else ?>
+<script src="<?cs var:config.docpath?>js/FileSaver.min.js?v=20200506" type="text/javascript"></script>
+<?cs /if ?>
+
 <script language="javascript" type="text/javascript">
 var <?cs var:config.plugin_pre ?>_plugin_list = null;
 var <?cs var:config.plugin_pre ?>_sel_plugin = null;
