--- a/html/dmt_login_tween.html
+++ b/html/dmt_login_tween.html
@@ -30,7 +30,7 @@
             <div class="kit-login-box">
                 <header>
 					<?cs if:config.isdaemon == 1 ?>
-                    <h1>字符云监控系统 - 开源演示版</h1>
+                    <h1>字符云监控系统 - 演示版</h1>
 					<?cs else ?>
                     <h1>字符云监控系统</h1>
 					<?cs /if ?>
