--- a/html/dmt_login_tween.html
+++ b/html/dmt_login_tween.html
@@ -107,7 +107,7 @@
 
 	function goto_online()
 	{
-		window.location = 'http://xrkmonitor.com';
+		window.open('http://xrkmonitor.com', '_blank');
 	}
 
 	function login_submit()
